Fix footnote wrapping in mobile chrome.

--- a/css/main.scss
+++ b/css/main.scss
@@ -19,7 +19,8 @@ p, li {
     line-height: 1.6;
 }
 
-article {
+// Punch card post has really long inline code block
+article p {
     overflow-wrap: break-word;
 }
 
@@ -109,12 +110,15 @@ h1 a {
 }
 
 .footnotes {
-    max-width: 100%;
     font-size: 1.6rem;
     margin-top: 26px;
     padding: 10px 0;
     border-top: 1px dashed $index-border-color;
-    overflow-wrap: break-word;
+
+    a {
+        // Seems to be the only way to wrap URLs in Chrome on mobile?
+        word-break: break-all;
+    }
 }
 
 .mobile-header {
